# ME0SegReco

./: LICENSE  README.md  environment.yaml  pyproject.toml  sanity-check.sh  setup.sh
config/: cnn.yaml  transformer.yaml
examples/: 00.dataset.ipynb  01.ME0SegCNN3d.ipynb  02.ME0Transformer.ipynb  03.Metrics.ipynb  04.ME0GNN.ipynb
src/me0/data/datasets/: GNNDataset.py  image.py  index.py
src/me0/modules/cnn/: model.py
src/me0/modules/gnn/: model.py
src/me0/modules/transformer/: model.py
src/me0/utils/: learningcurve.py
